# ashen-player

./: .gitignore  README.md  create-ico.ps1  create-icon.csx  create-icon.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
newvisual/archives_library/: code.html
newvisual/elden_song_main_player/: code.html
newvisual/ember_iron/: DESIGN.md
newvisual/grimoire_playlist_detail/: code.html
newvisual/sanctum_settings/: code.html
rpc/: discord_rpc.py  discord_rpc_helper.py
src/: App.tsx  MiniPlayer.tsx  NowPlayingOverlay.tsx  index.css
src-tauri/: 2  Cargo.toml  Cargo.tomlgPYHt1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  lib_backup.rs  main.rs
