[package]
name = "alora"
version = "0.1.0"
description = "Alora Music Player"
authors = ["Alora"]
edition = "2021"

[lib]
name = "alora_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tauri-plugin-fs = "2"
lofty = "0.24.0"
base64 = "0.22.1"
once_cell = "1"
reqwest = { version = "0.12", features = ["blocking"] }
urlencoding = "2"
tokio = { version = "1", features = ["process", "rt-multi-thread"] }
